--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,7 +2,17 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
+<head>
+    <meta charset="UTF-8">
+    <title>Error</title>
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
+    <style>
+        body { padding-top:80px; }
+    </style>
+    <script type="text/javascript" src='http://code.jquery.com/jquery.js'></script>
+    <script type="text/javascript" src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
+</head>
 <body class="container">
     <main>
         <div>
