--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,17 @@
 <!-- views/index.ejs -->
 <!DOCTYPE html>
 <html lang="en">
-<head></head>
+<head>
+    <meta charset="UTF-8">
+    <title>Index</title>
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
+    <style>
+        body { padding-top:80px; }
+    </style>
+    <script type="text/javascript" src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
+
+</head>
 <body class="container">
     <main>
         <div class="jumbotron">
