add footer and head ejs file, reduce the duplicate code in view.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,15 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Index</title>
-
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
-    <style>
-        body { padding-top:80px; }
-    </style>
-    <script type="text/javascript" src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
-
+    <title>Welcome to Gloria</title>
+    <% include ./parts/head %>
 </head>
 <body class="container">
     <main>
@@ -23,7 +16,7 @@
         </div>
     </main>
     <footer>
-        <p class="text-center text-muted">© All Rights Reserved by Tom Duan</p>
+        <% include ./parts/footer %>
     </footer>
 </body>
 </html>
