--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,15 +2,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>   
-    <meta charset="UTF-8">
     <title>Login to Gloria</title>
-
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
-    <style>
-        body { padding-top:80px; }
-    </style>
-    <script type="text/javascript" src='http://code.jquery.com/jquery.js'></script>
-    <script type="text/javascript" src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
+    <% include ./parts/head %>
 </head>
 <body>
     <main>
@@ -35,7 +28,7 @@
         </div>
     </main>
     <footer>
-        <p class="text-center text-muted">© All Rights Reserved by Tom Duan</p>
+        <% include ./parts/footer %>
     </footer>
 </body>
 </html>
