--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
         <div class="jumbotron">
             <h1>Hi  <%- user.local.username %> !</h1>
             <% if(user.local.username === 'admin') { %>
-                <a href="/signup" class="btn btn-primary btn-lg">Create a new user</a>
+                <a href="/signup" class="btn btn-primary btn-lg">Create a new account</a>
             <% } %>
         </div>
     </main>
