--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,25 +10,27 @@
         <% include ./parts/userHeader %>
     </header>
     <main>
-        <div class="container">
-            <div class="col-sm-3">
-                <h1>Please Login</h1>
-                <% if (message.length > 0) { %>
-                    <div class="alert alert-danger"><%= message %></div>
-                <% } %>
-                <form method="post" action="/login">
-                    <div class="form-group">
-                        <label>Username: </label>
-                        <input type="text" class="form-control" name="username">
-                    </div>
-                    <div class="form-group">
-                        <label>Password: </label>
-                        <input type="password" class="form-control" name="password">
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-lg">Login</button>
-                </form>
+        <div class="jumbotron">
+            <div class="container">
+                <h2>Please Login</h2>
+                <div class="col-sm-3">   
+                    <% if (message.length > 0) { %>
+                        <div class="alert alert-danger"><%= message %></div>
+                    <% } %>
+                    <form method="post" action="/login">
+                        <div class="form-group">
+                            <label>Username: </label>
+                            <input type="text" class="form-control" name="username">
+                        </div>
+                        <div class="form-group">
+                            <label>Password: </label>
+                            <input type="password" class="form-control" name="password">
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-lg">Login</button>
+                    </form>
+                </div>
             </div>
-        </div>
+        </div>  
     </main>
     <footer>
         <% include ./parts/footer %>
