--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,23 +10,25 @@
         <header>
             <% include ./parts/userHeader %>
         </header>
-        <div class="container">
-            <div class="col-sm-3">
-                <h1>Create a New Account</h1>
-                <% if (message.length > 0) { %>
-                    <div class="alert alert-danger"><%= message %></div>
-                <% } %>
-                <form method="post" action="/signup">
-                    <div class="form-group">
-                        <label>Username: </label>
-                        <input type="text" class="form-control" name="username">
-                    </div>
-                    <div class="form-group">
-                        <label>Password: </label>
-                        <input type="password" class="form-control" name="password">
-                    </div>
-                    <button type="submit" class="btn btn-primary btn-lg">Signup</button>
-                </form>
+        <div class="jumbotron">
+            <div class="container">
+                <h2>Create a new account</h2>
+                <div class="col-sm-3">
+                    <% if (message.length > 0) { %>
+                        <div class="alert alert-danger"><%= message %></div>
+                    <% } %>
+                    <form method="post" action="/signup">
+                        <div class="form-group">
+                            <label>Username: </label>
+                            <input type="text" class="form-control" name="username">
+                        </div>
+                        <div class="form-group">
+                            <label>Password: </label>
+                            <input type="password" class="form-control" name="password">
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-lg">Signup</button>
+                    </form>
+                </div>
             </div>
         </div>
     </main>
