change the name of userHeader to header, add a admin panel and it will shows the list of users and allow we add/remove users. TODO: move the create user button to a window, implement the delete user, implement the function of reset user password

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 </head>
 <body class="container">
     <header>
-        <% include ./parts/userHeader %>
+        <% include ./parts/header %>
     </header>
     <main>
         <div class="jumbotron">
