--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,7 +8,7 @@
 <body class="container">
     <main>
         <header>
-            <% include ./parts/userHeader %>
+            <% include ./parts/header %>
         </header>
         <div class="jumbotron">
             <div class="container">
