--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,14 +7,11 @@
 </head>
 <body class="container">
     <header>
-        <% include ./parts/userHeader %>
+        <% include ./parts/header %>
     </header>
     <main>
         <div class="jumbotron">
             <h1>Hi  <%- user.local.username %> !</h1>
-            <% if(user.local.username === 'admin') { %>
-                <a href="/signup" class="btn btn-primary btn-lg">Create a new account</a>
-            <% } %>
         </div>
     </main>
     <footer>
