change the style of remove button in admin page

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -16,7 +16,7 @@
             <% console.log(accList) %>
             <% for (var i = 0; i < accList.length; i ++) { %>
              <li class="list-group-item"><%= accList[i] %>
-             <a href="/" class="btn btn-sm pull-right"><span class="glyphicon glyphicon-trash"></span></a>
+             <button type="button" class="btn btn-default btn-xs pull-right" style="border:none;"><span class="glyphicon glyphicon-trash"></span></button>
              </li>
             <% } %>
         </ul>
