change the logic of Login and signup, now everybody can signup an account and login with it. Next step is to include javascript library to implement the handlers of buttons.

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,12 +10,12 @@
         <% include ./parts/header %>
     </header>
     <main>
-        <a href="/signup" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-plus"></span> Create a new account</a>
+        <a href="/admin" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-plus"></span> Create a new account</a>
         <p>
         <ul class="list-group">
             <% for (var i = 0; i < accList.length; i ++) { %>
              <li class="list-group-item"><%= accList[i] %>
-             <button type="button" class="btn btn-default btn-xs pull-right" style="border:none;"><span class="glyphicon glyphicon-trash"></span></button>
+             <button type="button" class="btn btn-default btn-xs pull-right" style="border:none;" data-toggle="tooltip" title="Delete this account"><span class="glyphicon glyphicon-trash"></span></button>
              </li>
             <% } %>
         </ul>
