--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
     <main>
         <div class="jumbotron">
             <div class="container">
-                <h2>Please Login</h2>
+                <h2>Login</h2>
                 <div class="col-sm-3">   
                     <% if (message.length > 0) { %>
                         <div class="alert alert-danger"><%= message %></div>
