--- a/views/parts/header.ejs
+++ b/views/parts/header.ejs
@@ -8,8 +8,12 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-          <% if(pageType !== 'login') { %>
-          <li><a href="/logout">Logout</a></li>
+          <% if(pageType === 'login') { %>
+            <li><a href="/signup" data-toggle="tooltip" title="Create a new account">Sign Up</a></li>
+          <% } else if(pageType === 'signup') { %>
+            <li><a href="/login" data-toggle="tooltip" title="Login with existing account">Login</a></li>
+          <% } else { %>
+            <li><a href="/logout" data-toggle="tooltip" title="Logout current account">Logout</a></li>
           <% } %>
       </ul>
     </div> 
